# aws-lambda-telemetry-eventbridge-enrichment

./: .cruft.json  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  buildspec_pr.yml  mise.toml  pyproject.toml
src/: exceptions.py  githubinspector.py  handler.py  helper.py  scratch.py
tests/unit/: conftest.py  handler_test.py  helper_test.py
